--- a/index.html
+++ b/index.html
@@ -471,8 +471,8 @@
                     <div class="banner-location" data-aos="fade-up" data-aos-duration="3000">
                         <p class="script-font">Lễ Thành Hôn</p>
 
-                        <p class="banner_location_name">Nhà Văn Hoá</p>
-                        <p class="banner_location_adress">Thụy Hà, Bao Hàm, Thái Thuỵ , Hưng Yên</p>
+                        <p class="banner_location_name">Nhà Văn Hoá Thụy Hà</p>
+                        <p class="banner_location_adress">Bao Hàm, Thái Thuỵ , Hưng Yên</p>
                         <div class="social-link">
                                                             <a href="tel:0365947926" class="phone_number">
                                     <i class="ri-phone-fill"></i>
@@ -583,7 +583,7 @@
                         </h3>
                         <address class="uk-margin-remove">
                             <p>
-                            </p><p>Tổ dân phố số 6, Thái Thuỵ, Hưng Yên</p>
+                            </p><p>Nhà văn hóa Thụy Hà, Bao Hàm, Thái Thuỵ , Hưng Yên</p>
                             <p></p>
                         </address>
                         <div class="invitation-body">
